<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.example.team_pigeon.movie_pigeon.HomePageActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_home"
            android:text="Home" />

        <RadioButton
            android:id="@+id/rb_now_showing"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_now_showing"
            android:text="Cinemas"/>

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_me"
            android:text="Me" />

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar" />


</RelativeLayout>
