<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/toolbar"
        app:titleTextColor="@color/div_white"
        android:id="@+id/me_toolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_toolbar"
        android:layout_alignParentStart="true">
        <TableRow
            android:id="@+id/me_rating"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/table_text_underline">
            <ImageView
                android:src="@drawable/ic_rating_star"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:scaleX="1.3"
                android:scaleY="1.3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Ratings"
                android:paddingTop="4dp"
                android:textSize="20sp"
                android:paddingLeft="10dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/me_bookmark"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/table_text_underline">
            <ImageView
                android:src="@drawable/ic_bookmark_grey"
                android:layout_gravity="left" />

            <TextView
                android:text="My Bookmarks"
                android:textSize="20sp"
                android:paddingTop="4dp"
                android:paddingLeft="10dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/me_settings"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/table_text_underline">
            <ImageView
                android:src="@drawable/ic_settings"
                android:layout_gravity="left"
                android:scaleY="1.3"
                android:scaleX="1.3"/>
            <TextView
                android:text="Settings"
                android:paddingTop="4dp"
                android:textSize="20sp"
                android:paddingLeft="10dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/me_logout"
            android:layout_marginTop="180dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/table_text_doubleline">
            <ImageView
                android:src="@drawable/ic_logout"
                android:layout_gravity="left"
                android:scaleX="1.3"
                android:scaleY="1.3"/>
            <TextView
                android:text="Logout"
                android:paddingTop="4dp"
                android:textSize="20sp"
                android:paddingLeft="10dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>